--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "recharts": "^2.4.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -21,13 +24,13 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.6",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
